force-app/main/default/objects/PumpStation__c/fields/WaterSupplyProcessMerhod__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyProcessMerhod__c</fullName>
    <description>水環境BU管理項目（上水）の処理方式</description>
    <label>処理方式</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>急速ろ過</fullName>
            </value>
            <value>
                <fullName>緩速ろ過</fullName>
            </value>
            <value>
                <fullName>消毒のみ</fullName>
            </value>
            <value>
                <fullName>膜ろ過</fullName>
            </value>
            <value>
                <fullName>高度浄水処理法</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>