force-app/main/default/objects/PumpStation__c/fields/WaterSupplyPurification2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyPurification2__c</fullName>
    <description>上水の動力・浄水処理2</description>
    <label>動力・浄水処理2</label>
    <type>TextArea</type>
</CustomField>