force-app/main/default/objects/PumpStation__c/fields/WaterSupplyPurificationRemarks1__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyPurificationRemarks1__c</fullName>
    <description>上水の動力・浄水処理1　備考</description>
    <label>動力・浄水処理1　備考</label>
    <type>TextArea</type>
</CustomField>