force-app/main/default/objects/PumpStation__c/fields/WaterSupplyPurificationRemarks2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyPurificationRemarks2__c</fullName>
    <description>上水の動力・浄水処理2　備考</description>
    <label>動力・浄水処理2　備考</label>
    <type>TextArea</type>
</CustomField>