force-app/main/default/objects/PumpStation__c/fields/WaterSupplyRoute__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyRoute__c</fullName>
    <label>用水供給/上水</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>用水供給</fullName>
            </value>
            <value>
                <fullName>上水</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>