force-app/main/default/objects/PumpStation__c/fields/WaterSupplySettilingBasin1__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplySettilingBasin1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>上水の凝集・沈砂池1</description>
    <label>凝集・沈砂池1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>事業所</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>機場 (凝集・沈砂池1)</relationshipLabel>
    <relationshipName>PumpStaWaterSupplySettilingBasin1</relationshipName>
    <type>Lookup</type>
</CustomField>