force-app/main/default/objects/PumpStation__c/fields/WaterSupplySettilingBasin2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplySettilingBasin2__c</fullName>
    <description>上水の凝集・沈砂池2</description>
    <label>凝集・沈砂池2</label>
    <type>TextArea</type>
</CustomField>