force-app/main/default/objects/PumpStation__c/fields/WaterSupplySettilingBasin2Remarks__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplySettilingBasin2Remarks__c</fullName>
    <description>上水の凝集・沈砂池2　備考</description>
    <label>凝集・沈砂池2　備考</label>
    <type>TextArea</type>
</CustomField>