force-app/main/default/objects/PumpStation__c/fields/WaterSupplySettilingBasinDeliveryYear__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplySettilingBasinDeliveryYear__c</fullName>
    <description>上水の凝集・沈砂池1　納入年度</description>
    <label>凝集・沈砂池1　納入年度</label>
    <length>4</length>
    <type>Text</type>
</CustomField>