force-app/main/default/objects/PumpStation__c/fields/WaterSupplySettilingBasinRemarks1__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplySettilingBasinRemarks1__c</fullName>
    <description>上水の凝集・沈砂池1　備考</description>
    <label>凝集・沈砂池1　備考</label>
    <type>TextArea</type>
</CustomField>