force-app/main/default/objects/PumpStation__c/fields/WaterSupplySupervisoryControl1__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplySupervisoryControl1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>上水の監視制御1</description>
    <label>上水監視制御1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>事業所</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>上水監視制御</relationshipLabel>
    <relationshipName>PumpStaWaterSupplySupervisoryCtrl1List</relationshipName>
    <type>Lookup</type>
</CustomField>