force-app/main/default/objects/PumpStation__c/fields/WaterSupplySupervisoryControl1Name__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplySupervisoryControl1Name__c</fullName>
    <formula>WaterSupplySupervisoryControl1__r.Name</formula>
    <label>上水監視制御1</label>
    <type>Text</type>
</CustomField>