force-app/main/default/objects/PumpStation__c/fields/WaterSupplySupervisoryControl2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplySupervisoryControl2__c</fullName>
    <description>上水の監視制御2</description>
    <label>上水監視制御2</label>
    <type>TextArea</type>
</CustomField>