force-app/main/default/objects/PumpStation__c/fields/WaterSupplySupervisoryControlRemark1__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplySupervisoryControlRemark1__c</fullName>
    <description>上水の監視制御1　備考</description>
    <label>上水監視制御1　備考</label>
    <type>TextArea</type>
</CustomField>