force-app/main/default/objects/PumpStation__c/fields/WaterSupplySupervisoryControlRemark2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplySupervisoryControlRemark2__c</fullName>
    <description>上水の監視制御2　備考</description>
    <label>上水監視制御2　備考</label>
    <type>TextArea</type>
</CustomField>