force-app/main/default/objects/PumpStation__c/fields/WaterSupplySupervisoryDeliveryYear__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplySupervisoryDeliveryYear__c</fullName>
    <description>上水の監視制御1　納入年度</description>
    <label>上水監視制御1　納入年度</label>
    <length>4</length>
    <type>Text</type>
</CustomField>