force-app/main/default/objects/PumpStation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Prefecture__c</columns>
    <columns>WaterSupplyBusinessEntity__c</columns>
    <columns>SewerBusinessEntity__c</columns>
    <columns>WaterSupplyOnboardCategory__c</columns>
    <columns>WaterSupplySupervisoryControl1__c</columns>
    <columns>SewerSupervisoryControl1__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>