force-app/main/default/objects/PumpStation__c/listViews/okishikijyo.listView-meta.xml
<ListView>
    <fullName>okishikijyo</fullName>
    <columns>NAME</columns>
    <columns>WaterSupplyBusinessEntity__c</columns>
    <columns>SewerBusinessEntity__c</columns>
    <columns>WaterSupplyOnboardCategory__c</columns>
    <columns>WaterSupplySupervisoryControl1__c</columns>
    <columns>SewerSupervisoryControl1__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WaterSupplyBusinessEntity__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Prefecture__c</field>
        <operation>equals</operation>
        <value>沖縄県</value>
    </filters>
    <label>沖縄支店の機場（上水）※九支・沖社シ殿のみ参照可能</label>
    <sharedTo>
        <roleAndSubordinatesInternal>M09151_okinawashakaisystem_MEN</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>M0915_okinawashakaisystem_MG</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>